--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>Sto Imparando HTML!</h1>
-    Hello there, awesome person!
+   <img src="https://avatars3.githubusercontent.com/u/64808853?v=4">
+   Hello there, awesome person!
   </body>
 </html>
