--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <img src="https://avatars3.githubusercontent.com/u/64808853?v=4">
  <ol> 
    <li>Youtube</li>
-   <li>facebook</li>
+   <li><a href="https://github.com">This is a link to GitHub!</a></li>
   </ol>
     
   </body>
