--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <body>
     <h1>Sto Imparando HTML!</h1>
    <img src="https://avatars3.githubusercontent.com/u/64808853?v=4">
- <ol> 
+Hello there!
+    <ol> 
    <li>Youtube</li>
    <li><a href="https://github.com">This is a link to GitHub!</a></li>
   </ol>
