--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>La mia pagina!</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Sto Imparando HTML!</h1>
